# osync_signal_server

./: CHANGELOG.md  Cargo.toml  Dockerfile  fly.toml
.github/workflows/: deploy.yml
src/: main.rs  room.rs
